chore: style components and change logos

--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -198,6 +198,10 @@ a {
   @extend .circle-round;
   background-color: var(--green-100);
 }
+.circle-check-green-30 {
+  @extend .circle-round;
+  background-color: var(--green-30);
+}
 main {
   @media (max-width: 575px) {
     margin-top: 20%;
