--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -1,14 +1,15 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid pt-2" style="max-width: 1440px; gap: 16px;">
     <a class="navbar-brand me-5" href="/">
-      <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" class="img-fluid" width="50" />
+      <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" class="img-fluid" />
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 16px;">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center" style="gap: 16px;">
         <li class="nav-item dropdown has-megamenu">
           <a class="nav-link px-0 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Company
+            <div class="header-link header-underline-animation">Company </div>
+            <img src="/assets/icons/drop-down-dark.svg" alt="">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <ul class="dropdown-list d-flex flex-column flex-sm-row">
@@ -43,24 +44,24 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="#" role="button" aria-expanded="false">
-            Resources
+            <div class="header-underline-animation">Resources</div>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="#" role="button" aria-expanded="false">
-            Pricing
+            <div class="header-underline-animation">Pricing</div>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="#" role="button" aria-expanded="false">
-            Blog
+            <div class="header-underline-animation">Blog</div>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="#" role="button" aria-expanded="false">
-            Store
+            <div class="header-underline-animation">Store</div>
           </a>
         </li>
       </ul>
