chore: remove tailwind

--- a/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.html
+++ b/apps/website/mfe/src/app/pages/how-it-works-page/how-it-works-page.component.html
@@ -10,7 +10,7 @@
             <div class="how-it-works-step-title">{{step.title | translate}}</div>
             <div *ngFor="let text of step.steps" class=" d-flex align-items-start how-it-works-steps">
                 <div>
-                    <div class="circle-check-yellow"><img alt="clutter free finds how it works"
+                    <div class="circle-check-green"><img alt="clutter free finds how it works"
                             src="/assets/icons/check-light.svg">
                     </div>
                 </div>
