--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
@@ -1,6 +1,6 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingMaterial">
-        <button [class.isActive]="pickedMaterial.isSelected" class="accordion-button" type="button"
+        <button [class.isCompleted]="pickedMaterial.isSelected" class="accordion-button" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseMaterial" aria-expanded="true"
             aria-controls="collapseMaterial">
             <div class="row steps w-100">
