--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -1,5 +1,5 @@
-<div class="form-heading">3. Service address</div>
 <div class="client-details-form">
+    <div class="form-heading">3. Service address</div>
     <div class="row">
         <div class="col-12 col-md-4 mb-3">
             <label for="clienQuoteEmail">E-mail address</label>
@@ -69,6 +69,28 @@
                 placeholder="House Number, suite, unit, Hse. etc.">
             <div class="invalid-feedback">
                 error
+            </div>
+        </div>
+    </div>
+
+</div>
+<div class="row">
+    <div class="form-heading">4. Service method</div>
+    <div class="row service-type">
+        <div class="col-6 col-lg-3">
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeHome" checked>
+                <label class="form-check-label" for="servicyTypeHome">
+                    Home Service
+                </label>
+            </div>
+        </div>
+        <div class="col-6 col-lg-3">
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeOnline">
+                <label class="form-check-label" for="servicyTypeOnline">
+                    Online service
+                </label>
             </div>
         </div>
     </div>
