--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -3,8 +3,8 @@
     <a class="navbar-brand me-5" href="/">
       <img src="/assets/images/logo.svg" alt="Clutter Free Finds Logo" class="img-fluid" />
     </a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center" style="gap: 16px;">
+    <div class="collapse navbar-collapse flex-col-md" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="gap: 16px;">
         <li class="nav-item dropdown has-megamenu">
           <a class="nav-link px-0 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
@@ -69,7 +69,7 @@
     </div>
     <div class="d-flex align-items-center">
       <div>
-        <a href="/instant-quote" class="btn primary-btn" type="button">
+        <a href="/instant-quote" class="btn primary-btn " type="button">
           {{ 'HEADER.BUTTON_1'| translate }}
         </a>
       </div>
