--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -106,7 +106,10 @@ a {
   background-color: var(--purple-100) !important;
   cursor: pointer;
   color: var(--light);
-
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
   a {
     color: var(--light);
     text-decoration: none;
