--- a/libs/shared/header/src/lib/header/header.component.scss
+++ b/libs/shared/header/src/lib/header/header.component.scss
@@ -5,7 +5,7 @@ nav {
     border: 0;
     &:focus {
       outline: 0;
-      box-shadow: 0 0 0 0.25rem var(--purple-30);
+      box-shadow: none;
     }
   }
   .primary-btn {
