chore: update quote calendar and persist data in form

--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -258,3 +258,7 @@ span.mdc-tab-indicator {
   background-color: var(--purple-100);
   color: var(--white-100);
 }
+
+.mat-calendar-body-disabled span {
+  text-decoration: line-through;
+}
