--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
@@ -1,39 +1,48 @@
-<div class="row d-flex align-items-start" style="row-gap: 24px;">
-    <div class="col-12 col-lg-6">
-        <div class="calendar-container d-flex flex-wrap justify-content-center">
-            <div>
-                <div class="check-availability d-flex my-2">
+<div class="calendar-container d-flex flex-wrap justify-content-center">
+    <div class="col-12 d-flex justify-content-end">
+        <div [class.circle-check-green-30]="selectedTime">
+            <img class="check" [class.d-flex]="selectedTime" alt="clutter free finds services"
+                src="/assets/icons/check-green.svg" width="10" />
+        </div>
+    </div>
+    <div class="row d-flex align-items-start col-12" style="gap: 24px;">
+        <div class="col-12 col-lg-4 me-auto mt-2">
+            <div class="date-time-header">1. Pick a date</div>
+            <div class="calendar-card">
+                <div class="check-availability d-flex ">
                     <div class="me-2">
                         Checking availability
                     </div>
                     <img src="assets/icons/loading-loop.svg" alt="">
                 </div>
                 <mat-card class="inline-calendar-card">
-                    <mat-calendar [(selected)]="selectedDate"></mat-calendar>
+                    <mat-calendar [minDate]="minDate" (selectedChange)="onDatePicked($event)" [selected]="selectedDate"
+                        ngDefaultControl [(ngModel)]="selectedDate"
+                        [ngModelOptions]="{standalone: true}"></mat-calendar>
                 </mat-card>
             </div>
-            <div>Selected date: {{selectedDate}}</div>
-            <div class="text-center quote-text">Your home should be the antidote of stress, not the cause of it.
+            <div class="col-12 text-center quote-text mt-3">Your home should be the antidote of stress, not the cause of
+                it. <span class="text-center quote-author">~Peter Walsh</span>
             </div>
-            <div class="quote-author">~Peter Walsh</div>
+        </div>
+        <div class="col-12 col-lg-7">
+            <div class="mt-2 date-time-header ">
+                <div>2. Pick a time {{selectedDate}}</div>
+            </div>
+            <div class="date-time-frame  mt-2">
+                <div class="date-time-item " *ngFor="let time of timePicker; index as i">
+                    <input (ngModelChange)="onTimePicked(time.value)" type="radio" name="time"
+                        [id]="'radio-time-btn-'+i" [value]="time" [(ngModel)]="selectedTime"
+                        [ngModelOptions]="{standalone: true} " />
+                    <label [style.pointerEvents]=" !selectedDate ? 'none' : 'auto'" [for]="'radio-time-btn-' +i"
+                        class="date-time-item">
+                        <div class="text">
+                            {{time.label}}
+                        </div>
+                    </label>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="col-12 col-lg-6">
-        <div class="date-time-header d-flex align-items-center justify-content-between">
-            <div>Pick a time</div>
-            <div class="circle-check-yellow-30">
-                <img alt="clutter free finds services" src="/assets/icons/check-green.svg" width="10" />
-            </div>
-        </div>
-        <div class="date-time-frame d-flex flex-wrap">
-            <div class="date-time-item" *ngFor="let time of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16]; index as i">
-                <input type="radio" name="time" [id]="'radio-time-btn-'+i" />
-                <label [for]="'radio-time-btn-'+i" class="date-time-item">
-                    <div class="text">
-                        9:00 AM
-                    </div>
-                </label>
-            </div>
-        </div>
-    </div>
+
 </div>
