--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.scss
@@ -1,16 +1,15 @@
 .calendar-container {
   box-sizing: border-box;
-  padding: 16px 56px 24px;
+  padding: 24px;
   gap: 16px;
   background: var(--purple-10);
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%237A23D366' stroke-width='2' stroke-dasharray='24' stroke-dashoffset='0' stroke-linecap='round'/%3e%3c/svg%3e");
   border-radius: 10px;
 }
-
-.inline-calendar-card {
-  padding: 8px;
-  width: 350px;
+.calendar-card {
+  padding: 24px;
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%237A23D366' stroke-width='2' stroke-dasharray='24' stroke-dashoffset='0' stroke-linecap='round'/%3e%3c/svg%3e");
 }
+
 .check-availability {
   color: var(--purple-100);
 }
@@ -32,14 +31,17 @@
 }
 
 .date-time-header {
-  padding: 10px;
-  background: var(--purple-10);
-  color: var(--black-100);
-  border-radius: 8px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
   margin-bottom: 24px;
 }
 .date-time-frame {
-  gap: 24px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+
   input[type='radio'] + label.date-time-item {
     display: flex;
     flex-direction: row;
@@ -50,7 +52,7 @@
     width: auto;
     height: 44px;
     border-radius: 24px;
-    background-color: var(--black-10);
+    background-color: var(--white-60);
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -70,4 +72,8 @@
     background-color: var(--purple-100);
     color: var(--white-100);
   }
+}
+
+.check {
+  display: none;
 }
