--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -1,11 +1,11 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingSpace">
-        <button [class.isActive]="selectedSpace.isSelected" class="accordion-button" type="button"
-            data-bs-toggle="collapse" [attr.data-bs-target]="isServiceSelected ? '#collapseSpace' : '' "
+        <button [disabled]="isServiceSelected.name === ''" [class.isSelected]="selectedCffSpace"
+            class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSpace"
             aria-expanded="true" aria-controls="collapseSpace">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 2:</div>
-                <div class="col-10 step-text">Select Space</div>
+                <div class="col-10 step-text">Select Space </div>
             </div>
         </button>
     </h2>
@@ -15,7 +15,7 @@
             <div class="cff-spaces">
                 <div class="d-flex" *ngFor="let space of spacesArr; index as i;">
                     <input type="radio" name="space" [id]="'radio-space-btn-'+i" [value]="space"
-                        [(ngModel)]="selectedSpace" [ngModelOptions]="{standalone: true}"
+                        [(ngModel)]="selectedCffSpace" [ngModelOptions]="{standalone: true}"
                         (ngModelChange)="fnSelectSpace(space)" />
                     <label [for]="'radio-space-btn-'+i" class="cff-space">
                         {{space.name}}
