--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.scss
@@ -11,7 +11,7 @@
     &::after {
       margin-left: 0 !important;
     }
-    &.isActive {
+    &.isSelected {
       color: var(--purple-100);
       --bs-accordion-btn-active-icon: url('/assets/icons/check-circle-completed.svg');
       --bs-accordion-btn-icon: url('/assets/icons/check-circle-completed.svg');
@@ -83,6 +83,6 @@
   }
 
   input[type='radio']:checked + label.cff-space {
-    background: rgba(var(--purple-100-rgb), 0.1);
+    background: rgba(var(--purple-100-rgb), 0.4);
   }
 }
