--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -262,3 +262,29 @@ span.mdc-tab-indicator {
 .mat-calendar-body-disabled span {
   text-decoration: line-through;
 }
+
+.pulse {
+  border-radius: 50%;
+  margin: 10px;
+  height: 20px;
+  width: 20px;
+  transform: scale(1);
+  box-shadow: 0 0 0 0 rgba(var(--purple-100-rgb), 1);
+  animation: pulse-purple 2s infinite;
+}
+@keyframes pulse-purple {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(var(--purple-100-rgb), 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(var(--purple-100-rgb), 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(var(--purple-100-rgb), 0);
+  }
+}
