refactor: state to be handled by individual components

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-product/quote-product.component.html
@@ -1,11 +1,11 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingMaterial">
-        <button [class.isCompleted]="pickedMaterial.isSelected" class="accordion-button" type="button"
-            data-bs-toggle="collapse" data-bs-target="#collapseMaterial" aria-expanded="true"
-            aria-controls="collapseMaterial">
+        <button [disabled]="isSpaceSelected?.id === ''" (click)="loadMaterials()" [class.isCompleted]="materialSelected"
+            class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMaterial"
+            aria-expanded="true" aria-controls="collapseMaterial">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 3:</div>
-                <div class="col-10 step-text">Select Material (optional) </div>
+                <div class="col-10 step-text">Select Material (optional) {{materialSelected?.id === 'default'}}</div>
             </div>
         </button>
     </h2>
@@ -17,31 +17,36 @@
                     <div class="flex-grow-1 d-flex flex-column" style="column-gap: 24px;">
                         <div class="d-flex align-items-center" style="column-gap: 24px;">
                             <div class=" select-header">Material</div>
-                            <select class="form-select" [(ngModel)]="pickedMaterial"
-                                [ngModelOptions]="{standalone: true}" (change)="fnSelectMaterial(pickedMaterial)">
-                                <option [selected]="(selectedMaterial$ | async)" [value]="material"
-                                    *ngFor="let material of materialsArr;">
+                            <select class="form-select" [(ngModel)]="materialSelected"
+                                [ngModelOptions]="{standalone: true}"
+                                (ngModelChange)="fnSelectMaterial(materialSelected?.id)">
+                                <option value="default" disabled [selected]="materialSelected?.id === 'default'">
+                                    Choose a material</option>
+                                <option *ngFor="let material of materialsArr;" [value]="material.id"
+                                    [selected]="materialSelected?.id === material.id">
                                     {{material.name}}
                                 </option>
                             </select>
+
                         </div>
                     </div>
                     <div class="">
-                        <button class="btn secondary-btn py-1" style="color: var(--purple-100);">Skip</button>
+                        <button (click)="setDefaultMaterial()" class="btn secondary-btn py-1"
+                            style="color: var(--purple-100);">Skip</button>
                     </div>
                 </div>
                 <material-tabs [tabsName]="allTabs"></material-tabs>
                 <ng-template #Pros>
                     <div class="material-container">
-                        <div class="pros " *ngFor="let pro of pickedMaterial.pros">
-                            <img src="assets/icons/check.svg" alt="">
+                        <div class="pros " *ngFor="let pro of materialSelected?.pros">
+                            <img src="assets/icons/check-purple.svg" alt="">
                             <div>{{pro}}</div>
                         </div>
                     </div>
                 </ng-template>
                 <ng-template #Cons>
                     <div class="material-container">
-                        <div class="cons " *ngFor="let con of pickedMaterial.cons">
+                        <div class="cons " *ngFor="let con of materialSelected?.cons">
                             <img src="assets/icons/red-close.svg" alt="" width="16">
                             <div>{{con}}</div>
                         </div>
