--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -1,8 +1,9 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingSpace">
-        <button [disabled]="isServiceSelected.name === ''" [class.isSelected]="selectedCffSpace"
-            class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSpace"
-            aria-expanded="true" aria-controls="collapseSpace">
+        <button (click)="loadSpaces()" [disabled]="isServiceSelected.id === ''"
+            [class.isSelected]="selectedCffSpace.id !== ''" class="accordion-button" type="button"
+            data-bs-toggle="collapse" data-bs-target="#collapseSpace" aria-expanded="true"
+            aria-controls="collapseSpace">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 2:</div>
                 <div class="col-10 step-text">Select Space </div>
