--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -1,6 +1,6 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingSpace">
-        <button (click)="loadSpaces()" [disabled]="isServiceSelected.id === ''"
+        <button (click)="loadSpaces()" [disabled]="(_service_selected$ | async)?.id === ''"
             [class.isSelected]="selectedCffSpace.id !== ''" class="accordion-button" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseSpace" aria-expanded="true"
             aria-controls="collapseSpace">
@@ -13,17 +13,26 @@
     <div id="collapseSpace" class="accordion-collapse collapse " aria-labelledby="headingSpace"
         data-bs-parent="#accordionQuote">
         <div class="accordion-body">
-            <div class="cff-spaces">
-                <div class="d-flex" *ngFor="let space of spacesArr; index as i;">
-                    <input type="radio" name="space" [id]="'radio-space-btn-'+i" [value]="space"
-                        [(ngModel)]="selectedCffSpace" [ngModelOptions]="{standalone: true}"
-                        (ngModelChange)="fnSelectSpace(space)" />
-                    <label [for]="'radio-space-btn-'+i" class="cff-space">
-                        {{space.name}}
-                    </label>
+            <ng-container *ngTemplateOutlet="returnListTemplate()"></ng-container>
+            <ng-template #loadingRef>
+                <div class="d-flex flex-wrap gap-2">
+                    <div *ngFor="let i of [1,2,3,4]" class="loading">
+                        <div class="loading-content flex-grow-1"></div>
+                    </div>
                 </div>
-
-            </div>
+            </ng-template>
+            <ng-template #loadedRef>
+                <div class="cff-spaces">
+                    <div class="d-flex" *ngFor="let space of spacesArr; index as i;">
+                        <input type="radio" name="space" [id]="'radio-space-btn-'+i" [value]="space"
+                            [(ngModel)]="selectedCffSpace" [ngModelOptions]="{standalone: true}"
+                            (ngModelChange)="fnSelectSpace(space)" />
+                        <label [for]="'radio-space-btn-'+i" class="cff-space">
+                            {{space.name}}
+                        </label>
+                    </div>
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
