--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -1,7 +1,6 @@
 <main role="main" class="d-flex flex-column container mx-auto">
     <div class="row" style="row-gap: 24px;" [formGroup]="createInstantQuote">
-        <div class="order-last order-md-first col-12 d-flex align-items-center justify-content-center form-heading"
-            style="gap: 16px;">
+        <div class="col-12 d-flex align-items-center justify-content-center form-heading" style="gap: 16px;">
             <button class="back-btn border-0" (click)="goBack()" [disabled]="currentStepIndex === 0"
                 [class]="currentStepIndex === 0 ? 'deactivated' : ''"><img src="assets/icons/arrow-right.svg" alt=""> Go
                 Back</button>
