refactor: change product name to material

--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -50,7 +50,7 @@
                     <div class="row">
                         <iq-quote-service (selectedService$)="getService($event)"></iq-quote-service>
                         <iq-quote-space (selectedSpaceEmit$)="getSpace($event)"></iq-quote-space>
-                        <iq-quote-product (selectedMaterialEmit$)="getMaterial($event)"></iq-quote-product>
+                        <iq-quote-material (selectedMaterialEmit$)="getMaterial($event)"></iq-quote-material>
                         <iq-quote-additonal-info></iq-quote-additonal-info>
                     </div>
                 </div>
