core: change logo im header and footer

--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
@@ -1,5 +1,5 @@
 <div class=" d-flex flex-wrap justify-content-center mx-auto">
-    <div class="row d-flex align-items-stretch justify-content-between w-100 mx-auto ">
+    <div class="row d-flex align-items-stretch justify-content-center w-100 mx-auto ">
         <div class="col-12 col-lg-5">
             <div class="date-time-header text-center">1. Pick a date</div>
             <div class="calendar-container">
@@ -21,7 +21,7 @@
                 it. <span class="text-center quote-author">~Peter Walsh</span>
             </div>
         </div>
-        <div class="col-12 col-lg-5 me-auto d-flex flex-column align-items-start align-items-md-center"
+        <div class="col-12 col-lg-5  d-flex flex-column align-items-start align-items-md-center"
             [class]="selectedDate ? 'show-time-picker' : 'hide-time-picker'">
             <div class="d-flex align-items-start justify-content-between w-100">
                 <div class="d-flex justify-content-center flex-grow-1 ">
